@@ -22,7 +22,7 @@ CoordMode, Mouse, Client
 ;Modron Automation Gem Farming Script
 GetScriptHubVersion()
 {
-    return "v4.0.3, 2025-08-11"
+    return "v4.0.4, 2025-08-14"
 }
 
 ;class and methods for parsing JSON (User details sent back from a server call)
@@ -78,6 +78,8 @@ if ( g_UserSettings[ "NoCtrlKeypress" ] == "" )
     g_UserSettings[ "NoCtrlKeypress" ] := 0
 if ( g_UserSettings[ "WaitForProcessTime" ] == "" )
     g_UserSettings[ "WaitForProcessTime" ] := 0
+if ( g_UserSettings[ "CheckForUpdates" ] == "" )
+    g_UserSettings[ "CheckForUpdates" ] := 1
 if(g_UserSettings[ "WriteSettings" ] == true)
 {
     g_UserSettings.Delete("WriteSettings")
