@@ -1,0 +1,9 @@
+{
+	"ExeName":"IdleDragons.exe",
+	"InstallPath":"E:\\Steam\\steamapps\\common\\IdleChampions\\IdleDragons.exe",
+	"NoCtrlKeypress":1,
+	"WaitForProcessTime":0,
+	"WindowTitle":"DEV BUILD",
+	"WindowXPosition":0,
+	"WindowYPosition":0
+}
