@@ -1,3 +1,8 @@
+August 14, 2025
+    Added latest version check to the Addons window.
+        Edit Settings.json in the main SH folder and change/add "CheckForUpdates":0 to disable.
+    Added option to add a proxy server in Settings.json for server calls.
+
 August 11, 2025
     Fixed new bug with dictionary objects that made it into the last update.
     Fixed memory reads that tried to check if a champion was fully leveled, but lost their reference values in the dll.
